--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "react": "18.0.0"
+    "react": "18.0.0",
+    "react-native": "0.69.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
