--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.2.2",
+    "@react-native-google-signin/google-signin": "^8.0.0",
     "react": "18.0.0",
-    "react-native": "0.69.5"
+    "react-native": "0.69.5",
+    "react-native-fbsdk-next": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
