--- a/package.json
+++ b/package.json
@@ -11,10 +11,23 @@
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.2.2",
+    "@react-native-firebase/app": "^15.4.0",
+    "@react-native-firebase/messaging": "^15.4.0",
     "@react-native-google-signin/google-signin": "^8.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "react": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-fbsdk-next": "^10.1.0"
+    "react-native-dotenv": "^3.3.1",
+    "react-native-fbsdk-next": "^10.1.0",
+    "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
